--- a/index.html
+++ b/index.html
@@ -246,5 +246,7 @@
 
   <!-- 外部 JS -->
   <script src="app.js" defer></script>
+  <script type="module" src="./firebase.js"></script>
 </body>
 </html>
+
