--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
   </main>
 
   <!-- 外部 JS -->
-  <script src="app.js" defer></script>
   <script type="module" src="./firebase.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
+
 
