--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input id="projectLocation" type="text" placeholder="例：台北小巨蛋 / 南港展覽館" />
           </div>
 
-          <div class="field">
+          <div class="field date-range">
             <label>專案期間</label>
             <div class="field-inline">
               <input id="projectStart" type="date" required />
@@ -271,3 +271,4 @@
   <script type="module" src="./app.js?v=20251223-104"></script>
 </body>
 </html>
+
