--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <label>專案狀態</label>
             <select id="projectStatus">
               <option value="planning">規劃中</option>
-              <option value="confirmed">已簽約 / 確認</option>
+              <option value="confirmed">已請款</option>
               <option value="executing">執行中</option>
               <option value="closed">已結案</option>
               <option value="lost">流標 / 未成案</option>
@@ -118,7 +118,7 @@
             <select id="projectFilterStatus">
               <option value="">全部狀態</option>
               <option value="planning">規劃中</option>
-              <option value="confirmed">已簽約 / 確認</option>
+              <option value="confirmed">已請款</option>        
               <option value="executing">執行中</option>
               <option value="closed">已結案</option>
               <option value="lost">流標 / 未成案</option>
@@ -275,3 +275,4 @@
   <script type="module" src="./app.js?v=20251223-104"></script>
 </body>
 </html>
+
